--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-hsparam=examples/example1/masterParams.hsparam
+hsparam=/Users/Johnathan/GitHub/HearthstoneAI/HearthSim/tests/test-0.450.250.250.250.250.250.250.250.250.25/masterParams.hsparam
 org.gradle.daemon=true
 org.gradle.parallel=true
