--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-hsparam=/soe/jpagnutt/HearthstoneAI/HearthSim/tests/test-0.500.250.500.250.750.250.250.250.250.25/masterParams.hsparam
+hsparam=examples/example1/masterParams.hsparam
 org.gradle.daemon=true
 org.gradle.parallel=true
