--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-hsparam=examples/example1/masterParams.hsparam
+hsparam=/soe/jpagnutt/HearthstoneAI/HearthSim-extendedTesting/tests/test-0.500.250.250.250.250.250.250.250.250.25/masterParams.hsparam
 org.gradle.daemon=true
 org.gradle.parallel=true
