--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ apply plugin: "groovy"
 sourceSets.main.java.srcDirs = []
 sourceSets.main.groovy.srcDir 'src/main/java'
 
+
+//And here we have the important important information
+
 task(runGui, dependsOn: 'classes', type: JavaExec) {
     main = 'com.hearthsim.gui.HearthSim'
     classpath = sourceSets.main.runtimeClasspath
